# Runa

./: .clangd  .editorconfig  .gitignore  .gitmodules  .sconsign.dblite  ARCHITECTURE.md  BUG_REPORT.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.backup  CppProperties.json  Dependencies.lua  README.md  RENDERING_STATUS.md  REPOSITORY_ANALYSIS.md  Runa-SDL.sln  SConstruct  SPRITESHEET_QUICKSTART.md  SPRITESHEET_SYSTEM.md  STRUCTURE.md  build_output.txt  cmake_output.txt  compile_commands.json  compile_shaders.bat  compile_shaders.sh  premake5.lua  tree.txt
.claude/: settings.local.json
Resources/: game.yaml  input_bindings.json  keybindings.yaml
Resources/SpiteSheets/: carpet_blue.yaml  carpet_red.yaml  cliffs.yaml  decor-grass.yaml  decor_8x8.yaml  dirt-grass.yaml  fences.yaml  grass.yaml  objects.yaml  shrooms.yaml  water-sheet.yaml
Resources/SpiteSheets/characters/: player.yaml
Resources/SpiteSheets/floors/: carpet.yaml
Resources/SpiteSheets/objects/: rock_in_water_frames.yaml
Resources/manifests/: bushes.yaml  decor_16x16.yaml  player.yaml  slime.yaml  tileset_manifest.yaml  tilesets.yaml
Resources/mystic_woods_2.2/sprites/characters/: player.yaml  slime.yaml
Resources/mystic_woods_2.2/sprites/tilesets/: decor_16x16.yaml  decor_8x8.yaml  fences.yaml  plains.yaml  water.yaml
Resources/mystic_woods_2.2/sprites/tilesets/floors/: carpet.yaml
Resources/mystic_woods_2.2/sprites/tilesets/walls/: walls.yaml
Resources/scenes/: README.md  sample_scene.txt
Resources/shaders/: README.md  basic.vert  bloom.frag  bloom.vert  blur.frag  crt.frag  crt.vert  damage_flash.frag  damage_flash.vert  day_night.frag  dissolve.frag  fade.frag  freeze.frag  ghost.frag  ghost.vert  glow.frag  grayscale.frag  heat_distortion.frag  kaleidoscope.frag  kaleidoscope.vert  lightning.frag  outline.frag  palette_swap.frag  pixelate.frag  pixelate.vert  poison.frag  portal.frag  psychedelic.frag  psychedelic.vert  sepia.frag  shield.frag  sprite.frag  sprite.vert  sprite_color.frag  sprite_color.vert  sprite_debug.frag  sprite_fixed.vert  sprite_simple.vert  vignette.frag  water.frag  (+1 more)
Runa/: Runa.vcxproj  Runa.vcxproj.filters  premake5.lua
Runa/src/: runapch.cpp  runapch.h
Runa/src/Game/: Game.cpp  Game.h  Runa.h  SpriteMetadata.cpp  SpriteMetadata.h  SpriteSheet.cpp  SpriteSheet.h  utilities.cpp  utilities.h
Runa/src/Game/Core/: Assert.h  Base.h  EntryPoint.cpp  Log.cpp  Log.h  PlatformDetection.h
Sandbox/: Entity.cpp  Entity.h  Mob.cpp  Mob.h  Player.cpp  Player.h  README.md  main.cpp  main_game.cpp  main_input_demo.cpp  main_rpg.cpp  main_scene_demo.cpp  premake5.lua
Sandbox/src/Game/: Game.cpp  SpriteSheet.cpp  SpriteSheet.h  utilities.cpp
Sandbox/src/Game/Core/: Assert.h  EntryPoint.cpp  Log.h  PlatformDetection.h
Scripts/: Setup.bat  Setup.py  SetupPremake.py  SetupVulkan.py  Win-GenProjects-2019.bat  Win-GenProjects-2022.bat
bin-int/Debug-windows-x86_64/Premake/: Premake.recipe
bin-int/Debug-windows-x86_64/Runa/: Runa.exe.recipe  vc143.idb
docs/: README.md
shaders/: README.md  basic.frag  basic.vert  compile_shaders.bat  compile_shaders.sh  sprite.frag  sprite.vert
src/: RunaAPI.h  Shader.cpp  Window.cpp  grass_test.cpp  main.cpp  main_rpg.cpp  runapch.cpp  runapch.h
src/Collision/: CollisionLoader.cpp  CollisionLoader.h  CollisionMap.cpp  CollisionMap.h  CollisionMask.cpp  CollisionMask.h
src/Core/: Application.cpp  Application.h  Collision.cpp  Collision.h  Entity.cpp  Entity.h  GamepadManager.cpp  GamepadManager.h  Input.cpp  Input.h  InputAction.h  InputBinding.h  InputManager.cpp  InputManager.h  Keybindings.cpp  Keybindings.h  Log.cpp  Log.h  PlayerController.cpp  PlayerController.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h
src/ECS/: Components.h  RPGComponents.h  RPGSystems.cpp  RPGSystems.h  Registry.cpp  Registry.h  Systems.cpp  Systems.h
src/Graphics/: Camera.cpp  Camera.h  Font.cpp  Font.h  ImGui.cpp  ImGui.h  PixelScale.cpp  PixelScale.h  PostProcess.cpp  PostProcess.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SimpleShapes.cpp  SimpleShapes.h  SpriteBatch.cpp  SpriteBatch.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h  TileMap.cpp  TileMap.h  Window.cpp  Window.h
src/Scenes/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  PauseScene.cpp  PauseScene.h  TestScene.cpp  TestScene.h
src/Vulkan/: CMakeLists.txt
src/Vulkan/VK2D/include/VK2D/: BlendModes.h  Blobs.h  Buffer.h  Camera.h  Constants.h  DescriptorBuffer.h  DescriptorControl.h  Gui.h  Image.h  Initializers.h  Logger.h  LogicalDevice.h  Math.h  Model.h  Opaque.h  PhysicalDevice.h  Pipeline.h  Polygon.h  Renderer.h  RendererMeta.h  Shader.h  ShadowEnvironment.h  Structs.h  Texture.h  Util.h  VK2D.h  Validation.h  VulkanInterface.h  nuklear.h  nuklear_defs.h  nuklear_sdl_vulkan.h  stb_image.h  tinyobj_loader_c.h  uthash.h
src/Vulkan/VK2D/src/: Buffer.c  Camera.c  Constants.c  DescriptorBuffer.c  DescriptorControl.c  Gui.c  Image.c  Initializers.c  Logger.c  LogicalDevice.c  Model.c  PhysicalDevice.c  Pipeline.c  Polygon.c  Renderer.c  RendererMeta.c  Shader.c  ShadowEnvironment.c  Texture.c  Util.c  Validation.c  VulkanInterface.c  nuklear.c
src/Vulkan2D/: CMakeLists.txt
src/Vulkan2D/VK2D/include/VK2D/: Blobs.h  Buffer.h  Camera.h  Gui.h  Initializers.h  Logger.h  Math.h  Opaque.h  PhysicalDevice.h  Renderer.h  Shader.h  ShadowEnvironment.h  Structs.h  Texture.h  Util.h  Validation.h  VulkanInterface.h  nuklear_defs.h  nuklear_sdl_vulkan.h  stb_image.h  uthash.h
src/Vulkan2D/VK2D/src/: Gui.c  Image.c  Initializers.c  LogicalDevice.c  Pipeline.c  Renderer.c  RendererMeta.c  ShadowEnvironment.c  Texture.c  Validation.c  VulkanInterface.c  nuklear.c
toolchains/: clang-mingw.cmake
